--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "/blog"
-url: "https://timichal.github.io"
+baseurl: ""
+url: "https://blog.zlatkovsky.cz"
 twitter_username: timichal
 github_username: timichal
 
