--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Vlakem po Evropě
 author: Michal Zlatkovský
 email: michal@zlatkovsky.cz
 description: >- # this means to ignore newlines until "baseurl:"
-  Toto je rozhodně blog!
+  O cestách vlakem po Evropě
 baseurl: ""
 url: "https://blog.zlatkovsky.cz"
 twitter_username: timichal
